Fixing too wide logo link

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -133,6 +133,11 @@ a {
   margin: 0 auto;
 }
 
+.logo-link {
+  width: fit-content;
+  margin: 0 auto;
+}
+
 // *=========================================
 // ** Main Nav  **
 // *=========================================
